HAPI logback test extension cleanup